node modules for eslint

--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "ajv-keywords": "^3.2.0",
     "chalk": "2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
     "cross-env": "5.2.0",
+    "eslint-config-defaults": "^9.0.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
@@ -132,10 +134,9 @@
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.6.0",
-    "jest-styled-components": "6.2.2",
+    "jest-styled-components": "^6.2.2",
     "lint-staged": "7.3.0",
     "ngrok": "3.1.0",
     "node-plop": "0.16.0",
